fix alignment issues

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ p, h1, h2, h3, h4, h5, h6 {
 .nav-links a {
     color: var(--page-background-color);
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2em;
     font-family: 'Montserrat', Arial, sans-serif;
 }
 
@@ -93,10 +93,24 @@ p, h1, h2, h3, h4, h5, h6 {
   padding: 20px;
 }
 
-#products {
+h1{
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.5em;
+    margin: 40px 0 10px 0;
+}
+
+h2 {
+    text-align: center;
+    font-size: 2em;
     margin: 40px 0 20px 0;
+}
+
+p {
+    font-size: 1.3em;
+    line-height: 1.6;
+    margin: 0 20px 20px 20px;
+    color: var(--main-text-color);
+    text-align: center;
 }
 
 .product-window {
@@ -107,6 +121,14 @@ p, h1, h2, h3, h4, h5, h6 {
     border: 4px solid var(--main-color);
 }
 
+.section-divider {
+    height: 5px;
+    width: 80%;
+    background-color: var(--divider-color);
+    margin: 40px auto;
+    border-radius: 5px;
+}
+
 .footer {
     background-color: var(--main-color);
     color: var(--page-background-color);
@@ -115,15 +137,19 @@ p, h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', Arial, sans-serif;
     display: flex;
     justify-content: space-around;
-    align-items: center;
     gap: 15px;
     width: 100%;
+}
+
+#copyright-text {
+    font-size: 1.5em;
+    color: var(--page-background-color)
 }
 
 .social-icons a {
     color: var(--page-background-color);
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 2em;
     margin: 0 10px;
 }
 
@@ -152,6 +178,7 @@ p, h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    transform: translate(-20px, 0);
   }
 
   .nav-links a {
@@ -159,6 +186,6 @@ p, h1, h2, h3, h4, h5, h6 {
   }
 
   .product-window {
-        margin: 10px auto;
-    }
+    margin: 10px auto;
+  }
 }
